# plasma

./: .current_stage  .dockerignore  .envrc  .gitignore  .gitlab-ci.yml  .settings  Pipfile  README.md  README.rst  __init__.py  bootstrap  current_stage  delete.py  deploy.py  docker-compose.yml  env.py  envs.sh  header.sh  monorepo.py  package.json  pyproject.toml  settings.env  setup_stage.sh  shangren.sh  shell.py  skaffold.py  skaffold.yaml
.bin/: pl.test  (+9 more)
citygroves/: .envrc  .flake8  .gitlab-ci-comm.yaml  .gitlab-ci.yaml  .gitlab-ci.yml  .settings  README.rst  __init__.py  cluster.py  core.py  delete.py  deploy.py  env_comm.py  env_local.py  env_stage.py  env_test.py  kind.yaml  kind.yaml.template  pyproject.toml  shell.py  skaffold.yaml
citygroves/.bin/: cg.add-hosts  cg.bootstrap-local  cg.bootstrap-staging  cg.cluster  cg.install-deps  cg.make-kube-ci-image  cg.make-python-ci-image  cg.start-tunnel  cg.test-bootstrap  cg.test-devops  citygroves.add-hosts  citygroves.bootstrap  citygroves.delete  citygroves.deploy  citygroves.deploy-all  citygroves.deploy-apps  citygroves.deploy-aux  citygroves.make-kube-ci-image  citygroves.make-python-ci-image  ngrok.yaml
citygroves/appgen/: .envrc  Chart.yaml  Dockerfile.local  Dockerfile.prebuild  Dockerfile.stage  __init__.py  app.py  delete.py  deploy.py  env.py  env_comm.py  env_local.py  env_stage.py  env_test.py  shell.py  skaffold.yaml  skaffold.yaml.template
citygroves/appgen/.bin/: ag.bootstrap
citygroves/appgen/chart/templates/: configmap.yaml  deployment.yaml  ingress.yaml
citygroves/appgen/flesh/: manage.py  pyproject.toml
citygroves/appgen/flesh/appgen/: celer.py  settings.py  tasks.py
citygroves/appgen/flesh/tasks/: tasks.py
citygroves/appgen/flesh/tests/: pytest.ini  tests_all.py
citygroves/appgen/templates/: configmap.yaml
citygroves/appgen/values/: local.yaml
citygroves/appgen/values/local/: appgen.yaml
citygroves/appgen/values/stage/: appgen.yaml
citygroves/appgen/values/test/: appgen.yaml
citygroves/aux/keycloak/: __init__.py
citygroves/aux/keycloak/dumps/: dump.sql
citygroves/aux/postgresql/: __init__.py
citygroves/aux/postgresql/k8s/: configmap.yaml  secret.yaml
citygroves/backend/: .envrc  .flake8  .gitlab-ci.yaml  Dockerfile.local  Dockerfile.prebuild  Dockerfile.stage  __init__.py  app.py  del.py  dep.py  env_comm.py  env_local.py  env_stage.py  env_test.py  pytest.ini  shell.py  skaffold.yaml  skaffold.yaml.template  tele.py
citygroves/backend/.bin/: backend.black  backend.ci  backend.delete  backend.deploy  backend.flake8  backend.format  backend.make-prebuild-image  backend.mypy  backend.terminal  be.bootstrap  be.build-prebuild-image  be.ci  be.deploy  be.format  be.isort  be.test  be.test-devops
citygroves/backend/chart/: values.yaml
citygroves/backend/chart/templates/: deployment.yaml  service.yaml
citygroves/backend/flesh/: manage.py  pyproject.toml
citygroves/backend/flesh/backend/: __init__.py  celer.py  settings.py  tools.py  urls.py
citygroves/backend/flesh/housing/: admin.py  apps.py  serializer.py
citygroves/backend/flesh/tenants/: models.py  serializers.py  tools.py  urls.py  views.py
citygroves/backend/sql/: init.sql
citygroves/backend/tests/test_devops/: conftest.py  env_local.py  env_prod.py  env_stage.py  env_test.py  pytest.ini  test_all.py
citygroves/backend/values/local/: backend.yaml
citygroves/backend/values/stage/: backend.yaml
citygroves/backend/values/test/: backend.yaml
citygroves/cert-manager/cert-manager/k8s/: crds.yaml  issuer.yaml
citygroves/comm/docker/: Dockerfile.kube-ci  Dockerfile.node.templ  Dockerfile.python-ci  Dockerfile.python.templ  Dockerfile.ubuntu-ci
citygroves/comm/kubernetes/: skaffold.yaml.templ
citygroves/comm/python/: setup.py
citygroves/comm/python/citygroves/: poetry_add.sh
citygroves/envs/: README.rst
citygroves/envs/prod/: README.rst
citygroves/envs/test/: README.rst
citygroves/frontend/: .envrc  Dockerfile.local  Dockerfile.stage  __init__.py  app.py  env_comm.py  env_local.py  env_stage.py  env_test.py  package.json  shell.py  skaffold.yaml  skaffold.yaml.template  values.yaml
citygroves/frontend/.bin/: fe.deploy  fe.skaffold  fe.tele  fe.terminal  frontend.deploy  frontend.skaffold
citygroves/frontend/chart/: values.yaml
citygroves/frontend/chart/templates/: configmap.yaml  deployment.yaml
citygroves/frontend/flesh/: .env  helpers.js  index.html  package-lock.json  package.json  skaffold.yaml  tsconfig.json  vue.config.js  webpack.config.js
citygroves/frontend/flesh/old/: main.js
citygroves/frontend/flesh/src/: App.vue  main.js
citygroves/frontend/values/: local.yaml
citygroves/frontend/values/local/: frontend.yaml
citygroves/frontend/values/stage/: frontend.yaml
citygroves/frontend/values/test/: frontend.yaml
citygroves/manager/: .envrc  .gitlab-ci.yml  Chart.yaml  Dockerfile.local  Dockerfile.stage  __init__.py  delete.py
citygroves/manager/chart/templates/: service.yaml  worker-deployment.yaml
citygroves/manager/flesh/: pyproject.toml
citygroves/manager/flesh/housing/: admin.py  models.py  serializer.py
citygroves/manager/flesh/manager/: celer.py  settings.py  urls.py
citygroves/manager/flesh/tenants/: admin.py  factories.py  models.py  serializers.py  tools.py  urls.py  views.py
citygroves/manager/sql/: init.sql
citygroves/manager/templates/: configmap.yaml  service.yaml  worker.yaml
citygroves/manager/values/: local.yaml
citygroves/manager/values/local/: manager.yaml
citygroves/manager/values/stage/: manager.yaml
citygroves/tests/test_bootstrap/: Dockerfile  conftest.py  test_all.py
citygroves/tests/test_devops/: conftest.py  env_comm.py  env_local.py  env_prod.py  env_stage.py  env_test.py
datacolls/bitstamp/flesh/: Pipfile  prov.py  pyproject.toml  settings.py
hmlet/photos/flesh/: cli.py  manage.py  pyproject.toml  pytest.ini  shell.py
hmlet/photos/flesh/core/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
hmlet/photos/flesh/media/: README.rst
mockexchs/bitstamp/flesh/: Pipfile  manage.py  pyproject.toml
(+755 files in other folders)
