[tool.poetry]
name = "shangren"
version = "0.1.0"
description = ""
authors = ["Damian Krystkiewicz <damian.krystkiewicz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
ipython = "^7.10"
kubernetes = "^10.0"
loguru = "^0.3.2"
stickybeak = "^0.4.9"
pytest = "^5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
