[tool.poetry]
name = "monorepo"
version = "0.1.0"
description = ""
authors = ["Damian Krystkiewicz <damian.krystkiewicz@gmail.com>"]

packages = [
    { include = "citygroves" },
    { include = "shangren" },
]

[tool.poetry.dependencies]
python = "^3.7"
furl = "^2.1"
requests = "^2.22"
pytest = "^5.3"
pytest-env = "^0.6.2"
pytest-socket = "^0.3.3"
responses = "^0.10.8"
loguru = "^0.4.0"
kubernetes = "^10.0"
click = "^7.0"
citygroves-comm = { path = "./citygroves/comm/python" }
plasma = { path = "./comm/python" }
django-environ = "^0.4.5"
ipython = "^7.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
