[tool.poetry]
name = "monorepo"
version = "0.1.0"
description = ""
authors = ["Damian Krystkiewicz <damian.krystkiewicz@gmail.com>"]

packages = [
]

[tool.poetry.dependencies]
python = "^3.8.1"
furl = "^2.1"
requests = "^2.22"
pytest = "^5.3"
pytest-env = "^0.6.2"
pytest-socket = "^0.3.3"
responses = "^0.10.8"
loguru = "^0.4.0"
kubernetes = "^10.0"
click = "^7.0"
pl = { path = "./comm/python" }
django-environ = "^0.4.5"
ipython = "^7.13.0"
fire = "^0.3.0"
jinja2 = "^2.11.1"
pexpect = "^4.8.0"
tqdm = "^4.45.0"
poetry = "1.0.3"
flake8 = "^3.7.9"
pep8-naming = "^0.10.0"
black = {version = "^19.10b0", allow-prereleases = true}
isort = {version = "^4.3.21", allow-prereleases = true}
pytest-timeout = "^1.3.4"
django = "^3.0.5"
requests_jwt = "^0.5.3"
django-admin-ip-whitelist = "^0.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
