[tool.poetry]
name = "citygroves"
version = "0.1.0"
description = ""
authors = ["Damian Krystkiewicz <damian.krystkiewicz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
furl = "^2.1"
requests = "^2.22"
django-environ = "^0.4.5"
pytest = "^5.3"
pytest-env = "^0.6.2"
pytest-socket = "^0.3.3"
responses = "^0.10.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
