[tool.poetry]
name = "mockexchs.bitstamp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flake8 = "^3.7"
influxdb = "^5.2"
ipython = "^7.10"
django = "^2.2"
websocket-client = "^0.56.0"
django-click = "^2.1"
tqdm = "^4.40"
psycopg2-binary = "^2.8"
django-environ = "^0.4.5"
channels = "^2.3"
channels-redis = "^2.4"
pytest-django = "^3.7"
djangorestframework = "^3.10"
stickybeak = "^0.4.9"
sentry_sdk = "^0.13.4"
loguru = "^0.3.2"
graypy = "^2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
